Fix Chrome OS Login status area layout.

Let ShelfLayoutManager perform layout before a shelf exists.
Fixes a regression from https://codereview.chromium.org/1851883002

Generalize NoSessionRootWindowControllerTest.Event
(ensure event handler(s) exists, not necessarily a single handler)
(not sure why it's only now finding the status area as a handler...)

Tested locally with:
  chrome --login-manager --login-profile=user --user-data-dir=/tmp/foo

BUG=600911
TEST=Status area is placed on bottom right during cros login
R=sky@chromium.org

Review URL: https://codereview.chromium.org/1866113002

Cr-Commit-Position: refs/heads/master@{#385812}

Former-commit-id: f9da4d84543481779c974d26b8c3536fdd0249e5